fix overflow-y on canvas

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100vw;
+  max-width: 100%;
+  max-height: 100%;
 }
 canvas {
   /*background-color: lightgray;
@@ -12,4 +15,7 @@ canvas {
   border: 1px solid black;
   /*   transform: scale(1.5)*/
   color:hsl(27, 69%, 15%); /* just to use color picking tool */
+  max-width: 100%;
+  max-height: 100%;
+  overflow-y: hidden;
 }
